[package]
name = "kernel"
version = "0.1.0"
authors = ["zoniony <1173900767@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = {version = "0.9.3", features=["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.11.0"
uart_16550 = "0.2.0"
linked_list_allocator = "0.8.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300 